--- a/package.json
+++ b/package.json
@@ -1,24 +1,32 @@
 {
   "name": "dkshs.me",
+  "description": "My portfolio",
   "version": "0.1.0",
+  "author": "DKSHS",
+  "license": "MIT",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint --dir . && eslint . && prettier . -c",
+    "lint:fix": "eslint --fix . && prettier . -w"
   },
   "dependencies": {
+    "next": "13.4.15",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@dkshs/eslint-config": "^1.3.2",
     "@types/node": "20.5.0",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.15",
-    "next": "13.4.15",
     "postcss": "8.4.27",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "prettier-plugin-tailwindcss": "^0.5.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
