--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,4 +16,5 @@ jobs:
         with:
           node-version: "16"
           cache: "npm"
+      - uses: bahmutov/npm-install@v1
       - run: npm run lint
