update: description in `package.json`

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dkshs.me",
-  "description": "My portfolio",
+  "description": "Bridge to my projects.",
   "version": "0.1.0",
   "author": "DKSHS",
   "license": "MIT",
