--- a/package.json
+++ b/package.json
@@ -13,21 +13,23 @@
     "lint:fix": "eslint --fix . && prettier . -w"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "next": "13.4.18",
+    "lucide-react": "^0.268.0",
+    "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwind-merge": "^1.14.0"
   },
   "devDependencies": {
     "@dkshs/eslint-config": "^1.3.2",
-    "@types/node": "20.5.0",
+    "@types/node": "20.5.1",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "eslint": "8.47.0",
-    "eslint-config-next": "13.4.18",
+    "eslint-config-next": "13.4.19",
     "postcss": "8.4.28",
     "prettier-plugin-tailwindcss": "^0.5.3",
     "tailwindcss": "3.3.3",
