fix: setting the `typescript` version to 5.1.6 because of the linters

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -18,6 +18,7 @@ updates:
   - package-ecosystem: "npm"
     directory: "/"
     ignore:
+      - dependency-name: "typescript"
       - dependency-name: "@types/*"
         update-types:
           - "version-update:semver-patch"
