--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "pre-commit": "lint-staged"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.1",
     "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -24,7 +26,10 @@
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwind-merge": "^1.14.0"
+    "react-hook-form": "^7.46.0",
+    "react-toastify": "^9.1.3",
+    "tailwind-merge": "^1.14.0",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "@dkshs/eslint-config": "^1.3.5",
