--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,7 +13,8 @@
       "type": "image/png"
     }
   ],
-  "theme_color": "#ffffff",
-  "background_color": "#ffffff",
+  "theme_color": "#2e1065",
+  "background_color": "#2e1065",
+  "start_url": "/",
   "display": "standalone"
 }
