feat: adding variables for SEO in `.env.example` and in the README

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,9 @@
 NEXT_PUBLIC_FORM_SEND_URL="https://formspree.io/f/<your_id>"
+
+# SEO ENV
+# ------------------------------------------------
+# these variables are used for the site's SEO
+# and are located in the `next.config.js` and `Meta.tsx` component
+SITE_NAME=YOUR_SITE_NAME
+SITE_LOCALE=en_US
+SITE_BASEURL=http://localhost:3000 # in PROD put the URL of your project
