--- a/package.json
+++ b/package.json
@@ -25,15 +25,21 @@
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.277.0",
     "next": "13.4.19",
+    "next-mdx-remote": "^4.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
     "react-toastify": "^9.1.3",
+    "rehype-pretty-code": "^0.10.1",
+    "rehype-slug": "^6.0.0",
+    "remark-gfm": "^3.0.1",
+    "shiki": "^0.14.4",
     "tailwind-merge": "^1.14.0",
     "zod": "^3.22.2"
   },
   "devDependencies": {
     "@dkshs/eslint-config": "^1.3.5",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
