feat: using contentlayer to generate the mdx of the projects and their respective data and removing use of the context

--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "contentlayer": "^0.3.4",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.277.0",
     "next": "13.4.19",
-    "next-mdx-remote": "^4.4.1",
+    "next-contentlayer": "^0.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
@@ -53,7 +54,7 @@
     "typescript": "5.2.2"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx,json,css,md}": [
+    "*.{js,jsx,ts,tsx,json,css,md,mdx}": [
       "npm run lint:fix"
     ]
   }
