--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "contentlayer": "^0.3.4",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.277.0",
+    "markdown-wasm": "^1.2.0",
     "next": "13.4.19",
     "next-contentlayer": "^0.3.4",
     "react": "18.2.0",
