--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,9 +12,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
       - uses: actions/setup-node@v4
         with:
-          node-version: "16"
-          cache: "npm"
-      - uses: bahmutov/npm-install@v1
-      - run: npm run lint
+          cache: "pnpm"
+          node-version: "18"
+      - name: Install dependencies
+        run: pnpm install
+      - run: pnpm run lint
