--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,json,css,md,mdx}": [
-      "npm run lint:fix"
+      "pnpm run lint:fix"
     ]
   }
 }
