feat: changing the pages folder to the app folder

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,6 @@ NEXT_PUBLIC_FORM_SEND_URL="https://formspree.io/f/<your_id>"
 # ------------------------------------------------
 # these variables are used for the site's SEO
 # and are located in the `next.config.js` and `Meta.tsx` component
-SITE_NAME=YOUR_SITE_NAME
-SITE_LOCALE=en_US
-SITE_BASEURL=http://localhost:3000 # in PROD put the URL of your project
+SITE_NAME="YOUR_SITE_NAME"
+SITE_LOCALE="en_US"
+SITE_BASEURL="http://localhost:3000" # in PROD put the URL of your project
