update: packages for your major version

--- a/package.json
+++ b/package.json
@@ -40,17 +40,17 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@dkshs/eslint-config": "^1.4.0",
+    "@dkshs/eslint-config": "1.4.0",
     "@tailwindcss/typography": "^0.5.10",
-    "@types/node": "20.8.9",
-    "@types/react": "18.2.33",
-    "@types/react-dom": "18.2.14",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "autoprefixer": "10.4.16",
-    "eslint": "8.53.0",
+    "eslint": "^8",
     "eslint-config-next": "14.0.1",
     "husky": "^8.0.3",
     "lint-staged": "^15.0.2",
-    "postcss": "8.4.31",
+    "postcss": "^8",
     "prettier-plugin-tailwindcss": "^0.5.6",
     "tailwindcss": "3.3.5",
     "typescript": "5.2.2"
