--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "markdown-wasm": "^1.2.0",
     "next": "14.0.3",
     "next-contentlayer": "^0.3.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18",
+    "react-dom": "^18",
     "react-hook-form": "^7.48.2",
     "react-toastify": "^9.1.3",
     "rehype-pretty-code": "^0.10.2",
@@ -45,15 +45,15 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "10.4.16",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
-    "husky": "^8.0.3",
-    "lint-staged": "^15.1.0",
+    "husky": "^8",
+    "lint-staged": "^15",
     "postcss": "^8",
     "prettier-plugin-tailwindcss": "^0.5.7",
-    "tailwindcss": "3.3.5",
-    "typescript": "5.3.2"
+    "tailwindcss": "^3.3.5",
+    "typescript": "^5"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,json,css,md,mdx}": [
