--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "rehype-pretty-code": "^0.12.0",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^3.0.1",
-    "shiki": "^0.14.5",
+    "shikiji": "0.7.x",
     "tailwind-merge": "^2.0.0",
     "zod": "^3.22.4"
   },
