--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
           version: 8
       - uses: actions/setup-node@v4
         with:
-          cache: "pnpm"
+          cache: pnpm
           node-version: "18"
       - name: Install dependencies
         run: pnpm install
