--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "dkshs.me",
-  "description": "Bridge to my projects.",
   "version": "0.1.0",
+  "private": true,
+  "description": "Bridge to my projects.",
   "author": "DKSHS",
   "license": "MIT",
-  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "contentlayer build && next build",
     "start": "next start",
-    "lint": "next lint --dir . && eslint . && prettier . -c",
-    "lint:fix": "eslint --fix . && prettier . -w",
+    "lint": "eslint .",
+    "lint:fix": "pnpm lint --fix",
     "prepare": "husky",
     "commitlint": "commitlint --edit",
     "pre-commit": "lint-staged"
@@ -43,18 +43,16 @@
   "devDependencies": {
     "@commitlint/cli": "^19.2.2",
     "@commitlint/config-conventional": "^19.2.2",
-    "@dkshs/eslint-config": "1.5.0",
+    "@dkshs/eslint-config": "2.2.0",
     "@tailwindcss/typography": "^0.5.12",
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.2",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "postcss": "^8.4.38",
-    "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
   },
