chore: update lint-staged configuration

--- a/package.json
+++ b/package.json
@@ -58,8 +58,6 @@
     "typescript": "^5.5.4"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx,json,css,md,mdx}": [
-      "pnpm lint:fix"
-    ]
+    "*": "pnpm lint:fix"
   }
 }
