--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   "author": "DKSHS",
   "license": "MIT",
   "scripts": {
-    "dev": "next dev",
+    "dev": "concurrently \"contentlayer2 dev\" \"next dev --turbopack\"",
     "build": "next build",
     "start": "next start",
     "lint": "eslint .",
     "lint:fix": "pnpm lint --fix",
+    "typecheck": "tsc --noEmit",
     "prepare": "husky",
     "commitlint": "commitlint --edit",
     "pre-commit": "lint-staged"
@@ -25,20 +26,16 @@
     "@t3-oss/env-nextjs": "^0.11.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "contentlayer": "^0.3.4",
+    "contentlayer2": "^0.5.3",
     "framer-motion": "^12.0.1",
     "lucide-react": "^0.473.0",
-    "markdown-wasm": "^1.2.0",
     "next": "15.1.5",
-    "next-contentlayer": "^0.3.4",
+    "next-contentlayer2": "^0.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-toastify": "^11.0.3",
-    "rehype-pretty-code": "^0.14.0",
-    "rehype-slug": "^6.0.0",
-    "remark-gfm": "^3.0.1",
-    "shiki": "^1.27.2",
+    "shiki": "^2.0.3",
     "tailwind-merge": "^2.6.0",
     "zod": "^3.24.1"
   },
@@ -51,10 +48,14 @@
     "@types/react": "^19.0.7",
     "@types/react-dom": "^19.0.3",
     "autoprefixer": "^10.4.20",
+    "concurrently": "^9.1.2",
     "eslint": "^9.18.0",
     "husky": "^9.1.7",
     "lint-staged": "^15.4.1",
     "postcss": "^8.5.1",
+    "rehype-pretty-code": "^0.14.0",
+    "rehype-slug": "^6.0.0",
+    "remark-gfm": "^4.0.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.3"
   },
