--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
           node-version-file: .nvmrc
       - name: Install dependencies
         run: pnpm install
-      - run: pnpm lint
+      - run: pnpm check
 
   lint-commits:
     name: Lint Commits
