--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "author": "DKSHS",
   "license": "MIT",
   "scripts": {
-    "dev": "concurrently \"contentlayer2 dev\" \"next dev --turbopack\"",
+    "dev": "concurrently --kill-others --names \"contentlayer,next\" -c \"magenta,black\" \"contentlayer2 dev\" \"next dev --turbopack\"",
     "build": "next build",
     "start": "next start",
     "lint": "eslint .",
