ci(fix): add contentlayer2 build

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,8 +17,8 @@ jobs:
         with:
           cache: pnpm
           node-version-file: .nvmrc
-      - name: Install dependencies
-        run: pnpm install
+      - run: pnpm install
+      - run: pnpm contentlayer2 build
       - run: pnpm check
 
   lint-commits:
