refactor: improve code structure and styling

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_FORM_SEND_URL="https://formspree.io/f/<your_id>"
+FORM_SEND_URL="https://formspree.io/f/<your_id>"
 
 # SEO ENV
 # ------------------------------------------------
