refactor: rename project from dkshs.me to ncontiero.com

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "DKSHS",
-  "short_name": "DKSHS",
+  "name": "Nicolas Contiero",
+  "short_name": "Nicolas C.",
   "theme_color": "#2e1065",
   "background_color": "#2e1065",
   "start_url": "/",
